--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
       <div class="swiper-slide-button swiper-button-next"></div>
     </div>
   </div>
+  <div class="chart-color">
+    <div class="chart-container">
+      <h2 class="section-title">Flores favoritas de la gente</h2>
+      <canvas id="floresChart" width="400" height="400"></canvas>
+    </div>
+
+  </div>
+
 
   <footer>
     <div class="footer-container">
@@ -135,6 +143,48 @@
       });
     });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const ctx = document.getElementById('floresChart').getContext('2d');
+      const floresChart = new Chart(ctx, {
+        type: 'polarArea',
+        data: {
+          labels: ['Anémona Azul', 'Flores de Cerezo', 'Amapolas', 'Acacia de Plata'],
+          datasets: [{
+            label: 'Flores favoritas',
+            data: [12, 19, 7, 14], // Datos inventados para la representación
+            backgroundColor: [
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(153, 102, 255, 0.2)'
+            ],
+            borderColor: [
+              'rgba(75, 192, 192, 1)',
+              'rgba(255, 99, 132, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(153, 102, 255, 1)'
+            ],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            r: {
+              beginAtZero: true
+            }
+          },
+          plugins: {
+            legend: {
+              position: 'top'
+            }
+          }
+        }
+      });
+    });
+  </script>
+
 
 </body>
 
